use median mass values and add N rule